@@ -254,6 +254,9 @@
 
       \item \code{Sys.setLanguage()} now works in an \command{LC_ALL=C R} session
       on some platforms.
+
+      \item Printing \code{ls.str()} now tries harder to show
+      \code{"<missing>"} even when \R's language setting is not English.
     }
   }
 }
